# nelpi

./: README.org  extract.py  flake.nix  main.py  pyproject.toml  repo
.github/workflows/: main.yaml
raw/: bonn.json  dormagen.json  münster.json
src/nelpi/: __init__.py
