[project]
name = "nelpi"
version = "0.1.0"
requires-python = "~=3.11.0"
dependencies = [
    "de-core-news-sm",
    "gensim>=4.3.3",
    "joblib>=1.5.2",
    "spacy>=3.8.7",
    "tqdm>=4.67.1",
]

[project.scripts]
nelpi = "nelpi:main"

[tool.setuptools.package-data]
nelpi = ["datasets/*.json"]

[tool.uv.sources]
de-core-news-sm = { url = "https://github.com/explosion/spacy-models/releases/download/de_core_news_sm-3.8.0/de_core_news_sm-3.8.0-py3-none-any.whl" }

[dependency-groups]
dev = [
    "ipython>=9.5.0",
]
